[gd_scene load_steps=3 format=2]

[ext_resource path="res://visual/menu_bg.png" type="Texture" id=1]
[ext_resource path="res://scenes/TileMapMenu.gd" type="Script" id=2]

[node name="TileMapMenu" type="TextureRect"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 2015, 485 )
current = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 521, 311 )

[node name="Position2D5" type="Position2D" parent="."]
position = Vector2( 885, 1072 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( 2008, 1570 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 2005, 316 )

[node name="Position2D4" type="Position2D" parent="."]
position = Vector2( 518, 1572 )

[node name="Position2D6" type="Position2D" parent="."]
position = Vector2( 1394, 633 )

[node name="Position2D7" type="Position2D" parent="."]
position = Vector2( 1413, 1266 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
